welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:48: error: class Array takes type parameters
def motif( nb: Int):Array = 
                    ^Array1:40: error: not found: value setBrosseCouleur
		setBrosseCouleur(T(c))
                ^